--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "plug"
-version = "0.1.0-dev"
+version = "0.1.0-dev.1"
 edition = "2024"
 authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
 license = "MIT"
